--- a/ms.tex
+++ b/ms.tex
@@ -1,7 +1,7 @@
 %%% TO DO
-%For documentation purposes, here is the list of action items:
-%Use log(C_ell) instead of C_ell
-%if failed; we would use the fiducial covariance, and then adjust the covariance using the best fit.
+% 1. add a constant to C_ell (trial and error) to see if log(C_ell+cte) is perfectly Gaussian, zero skewness and kurtosis, etc, higher moments
+% 2. fit DR9 with fNL=100 covariance to ensure that changing the covariance would not influence the results
+% 3. 
 %Use Hui’s weights
 %Use Rongpu’s weights
 %Check the impact of dropping lowest ell bin, or in general, how it change as a function of l_min
