--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -11,4 +11,4 @@ where $\phi$ represents the primordial gravitational field and $\fnl$ is the coe
 
 Previous studies of $\fnl$ with galaxy and quasar clustering have been hindered dramatically by spurious fluctuations in target density, which are due to the variation of imaging properties across the sky \citep{Ho2015JCAP...05..040H}. For instance, \cite{pullen2013systematic} found that the level of systematic contamination in the quasar sample of SDSS DRX does not allow a robust $\fnl$ measurement. These imaging systematic issues are expected to be severe for wide-area galaxy surveys that observe the night sky closer to the Galactic plane and select faint targets. Assuming imaging systematics are under control, the next generation of galaxy surveys such as DESI and the Rubin Observatory are forecast to yield unprecedented constraints on $\fnl$. Combined with CMB data, the limits can be enhanced to a precision level required to differentiate between single and multi-field inflationary models.
 
-In this paper, we use photometric galaxies and quasars from the DESI Legacy Imaging Surveys Data Release 9 to constrain the primordial non-Gaussianity parameter $\fnl$, while marginalizing over bias and shotnoise parameters. We make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate target density fields with the templates of imaging systematics to quantify systematic error and assess the effectiveness of systematics treatments and the significance of residual systematic error. The methodologies and statistical tools presented in this work will pave the path for future imaging surveys. 
+In this paper, we use photometric luminous red galaxies from the DESI Legacy Imaging Surveys Data Release 9 to constrain the primordial non-Gaussianity parameter $\fnl$, while marginalizing over bias and shotnoise parameters. We make use of spectroscopic data from DESI Survey Validation to determine the redshift distribution of galaxies. We cross correlate target density fields with the templates of imaging systematics to quantify systematic error and assess the effectiveness of systematics treatments and the significance of residual systematic error. The methodologies and statistical tools presented in this work will pave the path for future imaging surveys. 
