--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -68,11 +68,11 @@ The integral of the galaxy density contrast $\delta$ on the footprint is bound t
 \end{equation}
 
 
-\begin{figure*}
+\begin{figure}
 \centering
-\includegraphics[width=0.95\textwidth]{hist_cl.pdf}
+\includegraphics[width=0.45\textwidth]{hist_cl.pdf}
 \caption{Distribution of the first bin power spectrum for $\fnl=0$ and $100$ mocks.}
-\end{figure*}
+\end{figure}
 
 \begin{figure}
 \centering
