--- a/sections/results.tex
+++ b/sections/results.tex
@@ -36,14 +36,14 @@ $\fnl=0$ & BASS+MzLS  &  log$C_{\ell}$                       & $  1.07$& $  1.07
     \includegraphics[width=0.45\textwidth]{figures/mcmc_po100.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/bestfit_zero.pdf} 
     \includegraphics[width=0.45\textwidth]{figures/bestfit_po100.pdf}         
-    \caption{Top: 68\% and 95\% confidence contours for $\fnl=0$ (left) and $100$ (right) mocks. Using the $\log C_{\ell}$ fitting yield constraints that are insensitive to the covariance used. Bottom: best fit estimates from fitting 1000 lognormal mocks with $\fnl=0$ (left) and $100$ (right) in the DESI footprint. The truth values are represented by vertical and horizontal lines, and the mean of best fit estimates are denoted by the red stars.}\label{fig:mcmc_mocks}
+    \caption{Top: 68\% and 95\% confidence contours for $\fnl=0$ (left) and $100$ (right) mocks. Using the $\log C_{\ell}$ fitting yield constraints that are insensitive to the covariance used. Bottom: best fit estimates from fitting 1000 lognormal mocks with $\fnl=0$ (left) and $100$ (right) in the DESI footprint. The truth values are represented by vertical and horizontal lines.}\label{fig:mcmc_mocks}
 \end{figure*}
 
 
 
 \subsection{DR9 LRGs}
 \begin{table*}
-    \caption{Maximum-A-Posteriori (MAP) and marginalized mean estimates for $\fnl$ from fitting power spectrum of DR9 LRGs for DESI footprint before and after correcting for systematics. Degree of freedom is 33 (37 data points - 3 parameters - 1).}
+    \caption{Maximum-A-Posteriori (MAP) and marginalized mean estimates for $\fnl$ from fitting power spectrum of DR9 LRGs before and after correcting for systematics. Degree of freedom is 33 (37 data points - 3 parameters - 1).}
     \label{tab:dr9method}
    \centerline{%     
     \begin{tabular}{llllllll}
@@ -60,10 +60,10 @@ DESI & Nonlinear (Conservative II)                    & $ 37.15$& $ 38.73$& $ 24
 BASS+MzLS & Nonlin. (Cons. II)          & $ 20.06$& $ 24.71$& $ -1.52<\fnl< 51.26$& $-24.95<\fnl< 82.62$ &   35.6\\
 DECaLS North    & Nonlin. (Cons. II)                               & $ 53.33$& $ 58.36$& $ 30.33<\fnl< 86.81$& $  6.45<\fnl<120.93$ &   41.1\\
 DECaLS North   & Nonlin.(Cons. II+CALIBZ+HI)             & $ 72.10$& $ 78.57$& $ 47.81<\fnl<109.27$& $ 23.22<\fnl<146.65$ &   38.4\\
-DECaLS North [no DEC cut] & Nonlin. (Cons. II)                & $ 53.36$& $ 58.27$& $ 30.65<\fnl< 85.91$& $  8.33<\fnl<118.84$ &   40.7\\
+DECaLS North (no cut) & Nonlin. (Cons. II)                & $ 53.36$& $ 58.27$& $ 30.65<\fnl< 85.91$& $  8.33<\fnl<118.84$ &   40.7\\
 DECaLS South    & Nonlin.(Cons. II)                               & $ 40.61$& $ 43.17$& $ 19.36<\fnl< 68.11$& $ -6.64<\fnl< 96.65$ &   30.2\\
 DECaLS South & Nonlin. (Cons. II+CALIBZ+HI)            & $ 43.93$& $ 48.74$& $ 23.02<\fnl< 74.64$& $ -0.40<\fnl<105.22$ &   30.8\\
-DECaLS South [no DEC cut] & Nonlin. (Cons. II)                & $ 56.93$& $ 60.83$& $ 39.20<\fnl< 82.44$& $ 21.30<\fnl<107.53$ &   23.8\\
+DECaLS South (no cut) & Nonlin. (Cons. II)                & $ 56.93$& $ 60.83$& $ 39.20<\fnl< 82.44$& $ 21.30<\fnl<107.53$ &   23.8\\
 \hline
     \end{tabular}
 }
