--- a/sections/results.tex
+++ b/sections/results.tex
@@ -100,3 +100,9 @@ DECaLS South (no cut) & Nonlin. (Cons. II)                & $ 56.93$& $ 60.83$& 
     \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9_cutdec.pdf}     
     \caption{Impact of cutting out spurious islands in DECaLS North and DEC < -30 in DECaLS South.}\label{fig:mcmc_dr9cuts}
 \end{figure}
+
+\begin{figure}
+    \centering
+    \includegraphics[width=0.45\textwidth]{figures/fnl_elmin.pdf}     
+    \caption{Mean estimates of $\fnl$ and its $65$\% and $95$\% errorbars after changing the lowest $\ell$ mode used in fitting.}\label{fig:mcmc_dr9elmin}
+\end{figure}
