--- a/sections/results.tex
+++ b/sections/results.tex
@@ -80,29 +80,29 @@ DECaLS South (no cut) & Nonlin. (Cons. II)                & $ 56.93$& $ 60.83$& 
 \begin{figure*}
 \centering
     \includegraphics[width=0.95\textwidth]{figures/pdf_dr9vsmocks.pdf} 
-    \caption{}\label{fig:dr9vsmocks}
+    \caption{Best fit $\chi^{2}$ and $\fnl$ from fitting mocks (histograms) and DR9 (vertical line).}\label{fig:dr9vsmocks}
 \end{figure*}
 
 \begin{figure*}
     \centering
     \includegraphics[width=0.95\textwidth]{figures/mcmc_dr9methods.pdf} 
-    \caption{DR9 LRGs for DESI footprint.}\label{fig:mcmc_dr9}
+    \caption{DR9 constraints. DESI footprint before and after applying various cleaning methods.}\label{fig:mcmc_dr9}
 \end{figure*}
 
 \begin{figure*}
     \centering
     \includegraphics[width=0.95\textwidth]{figures/mcmc_dr9regions.pdf} 
-    \caption{DR9 LRGs for each individual imaging survey.}\label{fig:mcmc_dr9reg}
+    \caption{DR9 constraints. Each individual imaging survey versus the whole DESI footprint.}\label{fig:mcmc_dr9reg}
 \end{figure*}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9_cutdec.pdf}     
-    \caption{Impact of cutting out spurious islands in DECaLS North and DEC < -30 in DECaLS South.}\label{fig:mcmc_dr9cuts}
+    \caption{DR9 constraints. Impact of cutting out spurious islands in DECaLS North and DEC < -30 in DECaLS South.}\label{fig:mcmc_dr9cuts}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.45\textwidth]{figures/fnl_elmin.pdf}     
-    \caption{Mean estimates of $\fnl$ and its $65$\% and $95$\% errorbars after changing the lowest $\ell$ mode used in fitting.}\label{fig:mcmc_dr9elmin}
+    \caption{DR9 Constraints. Mean estimates of $\fnl$ and its $65$\% and $95$\% errorbars after changing the lowest $\ell$ mode used in fitting.}\label{fig:mcmc_dr9elmin}
 \end{figure}
