--- a/ms.tex
+++ b/ms.tex
@@ -1,5 +1,6 @@
 %%% TO DO
-% 1. add a constant to C_ell (trial and error) to see if log(C_ell+cte) is perfectly Gaussian, zero skewness and kurtosis, etc, higher moments
+% Fig.5. add some statistics (skewness, kurtosis, etc) to test whether Gaussian. Add ideal N(mu, sigma) to the panels
+%1. add a constant to C_ell (trial and error) to see if log(C_ell+cte) is perfectly Gaussian, zero skewness and kurtosis, etc, higher moments
 % 2. fit DR9 with fNL=100 covariance to ensure that changing the covariance would not influence the results
 % 3. 
 %Use Hui’s weights
@@ -15,6 +16,7 @@
 
 \documentclass[fleqn, usenatbib]{mnras}
 \usepackage{style} % the settings are all here 
+\usepackage{booktabs,array}  
 
 \title[PNG with DESI Imaging]{Constraints on local primordial non-Gaussianity from the large-scale clustering of DESI Luminous Red Galaxies}
 
