--- a/sections/results.tex
+++ b/sections/results.tex
@@ -10,7 +10,7 @@ Corner plots of the PNG parameter $\fnl$ and bias coefficient are shown in Fig. 
     \caption{Maximum-A-Posteriori (MAP) and marginalized mean estimates for $\fnl$ from fitting the mean power spectrum of the mocks. Degree of freedom is 33 (37 data points - 3 parameters - 1).}   
     \label{tab:mocksmcmc}  
    \centerline{%
-    \begin{tabular}{llllllll}
+    \begin{tabular}{clllllll}
     \hline
     \hline
    &  & 	  & & & $\fnl$ &  \\
@@ -60,7 +60,7 @@ $0$ & BASS+MzLS    &  log$C_{\ell}$     & $  0.83$& $  0.82$& $  0.25<\fnl<  1.4
 Footprint   & Method & 	Best fit  & Mean & $ 68\%$ CL & $ 95\%$ CL & $\chi^{2}$ \\
     \hline
 DESI                      & No Weight   & $113.18$& $115.49$& $ 98.14<\fnl<132.89$& $ 83.51<\fnl<151.59$ &   44.4\\
-DESI                      & Linear (All maps)& $ 36.05$& $ 37.72$& $ 26.13<\fnl< 49.21$& $ 16.31<\fnl< 62.31$ &   41.1\\
+DESI                      & Linear (All Maps)& $ 36.05$& $ 37.72$& $ 26.13<\fnl< 49.21$& $ 16.31<\fnl< 62.31$ &   41.1\\
 DESI                      & Linear (Conservative I)& $ 49.58$& $ 51.30$& $ 38.21<\fnl< 64.33$& $ 27.41<\fnl< 78.91$ &   38.8\\
 DESI                      & Linear (Conservative II)& $ 36.63$& $ 38.11$& $ 26.32<\fnl< 49.86$& $ 16.36<\fnl< 63.12$ &   39.6\\
 DESI                      & Nonlinear (Conservative II)& $ 28.58$& $ 29.79$& $ 18.91<\fnl< 40.59$& $  9.47<\fnl< 52.73$ &   34.6\\
@@ -82,30 +82,30 @@ DECaLS South (imag. cut)  & Nonlin. (Cons. II)& $ 26.47$& $ 23.36$& $  3.18<\fnl
 \end{table*}
 
 
-\begin{figure*}
+\begin{figure}
     \centering
-    \includegraphics[width=0.95\textwidth]{figures/model_dr9.pdf} 
+    \includegraphics[width=0.45\textwidth]{figures/model_dr9.pdf} 
     \caption{Measured power spectrum of the DR9 LRG sample before and after correcting for systematics with their corresponding best fit theory predictions. The shade represents $1\sigma$ error constructed from the $\fnl=0$ mocks.}
     \label{fig:cl_dr9}
-\end{figure*}
+\end{figure}
 
-\begin{figure*}
+\begin{figure}
 \centering
-    \includegraphics[width=0.95\textwidth]{figures/pdf_dr9vsmocks.pdf} 
+    \includegraphics[width=0.45\textwidth]{figures/pdf_dr9vsmocks.pdf} 
     \caption{Best fit $\chi^{2}$ and $\fnl$ from fitting mocks (histograms) and DR9 (vertical line).}\label{fig:dr9vsmocks}
-\end{figure*}
+\end{figure}
 
-\begin{figure*}
+\begin{figure}
     \centering
-    \includegraphics[width=0.95\textwidth]{figures/mcmc_dr9methods.pdf} 
+    \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9methods.pdf} 
     \caption{DR9 constraints. DESI footprint before and after applying various cleaning methods.}\label{fig:mcmc_dr9}
-\end{figure*}
+\end{figure}
 
-\begin{figure*}
+\begin{figure}
     \centering
-    \includegraphics[width=0.95\textwidth]{figures/mcmc_dr9regions.pdf} 
+    \includegraphics[width=0.45\textwidth]{figures/mcmc_dr9regions.pdf} 
     \caption{DR9 constraints. Each individual imaging survey versus the whole DESI footprint.}\label{fig:mcmc_dr9reg}
-\end{figure*}
+\end{figure}
 
 \begin{figure}
     \centering
