--- a/sections/extra.tex
+++ b/sections/extra.tex
@@ -1,2 +1,10 @@
-\section{Extra}
-You can put extra stuff here as appendix.
+\section{Redshift distribution}
+Redshift distribution of LRGs is constructed from the DESI SV data release of Denali with the same selection. The fiducial distribution only covers the redshift range from 0.2 to 1.35. Below we test the impact of LRG dN/dz on the angular power spectrum.
+
+
+\begin{figure}
+\centering
+\includegraphics[width=0.45\textwidth]{nztreat.pdf}
+\includegraphics[width=0.45\textwidth]{cell_nz.pdf}
+\caption{Top: Redshift distribution of LRGs. Bottom: Power spectrum given various dN/dz treatments for two arbitrary $\fnl$ values.}
+\end{figure}
