--- a/ms.tex
+++ b/ms.tex
@@ -50,8 +50,8 @@ cosmology: inflation - large-scale structure of the Universe
 % references
 \bibliographystyle{mnras}
 \bibliography{refs} 
-%\appendix
-
+\appendix
+\include{sections/extra}
 
 % % % Don't change these lines
 \bsp	% typesetting comment
