update the drafts

--- a/ms.tex
+++ b/ms.tex
@@ -1,8 +1,13 @@
 %%% TO DO
 % Fig.5. add some statistics (skewness, kurtosis, etc) to test whether Gaussian. Add ideal N(mu, sigma) to the panels
 %1. add a constant to C_ell (trial and error) to see if log(C_ell+cte) is perfectly Gaussian, zero skewness and kurtosis, etc, higher moments
-% 2. fit DR9 with fNL=100 covariance to ensure that changing the covariance would not influence the results
 % 3. 
+%Mock test in the presence of systematics: (include applying the most rigorous method on both the mocks and data)
+%Check the impact of n(z -> 0) on C_ell and fNL constraints
+%Try the main selection of LRGs
+%Increase the max ell for the cross power spectrum used in χ2
+%Test theory code with non-zero fNL mocks
+%Test covariance: DR9 fNL constraints using the fNL=100 covariance
 %Use Hui’s weights
 %Use Rongpu’s weights
 %Check the impact of dropping lowest ell bin, or in general, how it change as a function of l_min
