--- a/sections/methodology.tex
+++ b/sections/methodology.tex
@@ -122,12 +122,9 @@ where the covariance matrix $C = < \delta_{X} \delta_{X}>$ is constructed from m
 \caption{Residual systematic fluctuations of DR9 LRGs against imaging maps. Left: cross spectrum. Right: mean density contrast. Shades represent $1\sigma$ dispersion of 1000 clean mocks with and without $\fnl$.}\label{fig:clxmock}
 \end{figure*}
 
-\begin{figure*}
+\begin{figure}
 \centering
 \includegraphics[width=0.45\textwidth]{chi2test.pdf}
 \includegraphics[width=0.45\textwidth]{chi2test2.pdf}
 \caption{Left: Cross power spectrum $\chi^{2}$ diagnostic. Right: Mean density contrast diagnostic. The values observed in DR9 before and after linear and nonlinear treatments are quoted and the histograms are constructed from 1000 realizations of clean mocks with $\fnl=0$ and $100$.}
-\end{figure*}
-
-
-%\clearpage
+\end{figure}
