--- a/ms.tex
+++ b/ms.tex
@@ -15,6 +15,14 @@
 %Check the impact of applying a rigorous cut on pixel completeness.
 % look into analytical covariance, e.g., Gaussian
 % Mehdi,
+%In order to avoid the confirmation bias, we should not select the model with nstar as our best model, since we don’t have other indicators showing this model is more reasonable than the current default.
+%On the other hand, we don’t believe fnl is off by 30 from zero, trusting that the Planck cannot be that wrong. Then, we can assume the true cosmology based on the Planck and consider our analysis as an exercise to identify major known/unknown(?) systematics, so that we can be ready for the upcoming spectroscopic fnl. (edited) 
+%
+%
+%Mehdi Rezaie
+%  < 1 minute ago
+%Sounds like a good argument — we cannot justify using nStar based on the mean density and cross spectra chi-2 tests.
+%One other takeaway would be that our result does indeed motivate further investments and studies of the local stellar density and MW extinction if one wants to achieve a robust σ(fNL)~5 with DESI (or ~1 with LSST+CMB).
 %
 %In the SV3 LRG selection, the TS density is ~800 deg^-2 (in the main selection, the LRG density is ~600 deg^-2). I think some additional cuts, by removing a few percents, we can improve the purity of the selection. It’s worth talking about that with Rongpu. As we have the spectro catalog, I think that it is clearly possible. 
 %
